# hoff

./: .envrc  default.nix  hoff.cabal  notes.org  odbc.patch
exec/: Bench.hs
nix/: sources.json
python/: HoffSerialise.py  bench.py
src/: Hoff.hs  Main.hs
src/Hoff/: Asd.hs  Dict.hs  Examples.hs  Examples2.hs  H.hs  HQuery.hs  Iterable.hs  JSON.hs  Python.hs  Serialise.hs  Show.hs  SqlServer.hs  Sqlite.hs  Stream.hs  Table.hs  Table_wrapped_sum.hs  Tests.hs  TypedTable.hs  Utils.hs  Vector.hs
src/Hoff/HQuery/: Execution.hs  Expressions.hs  Operators.hs  TH.hs
src/Hoff/Table/: Operations.hs  Show.hs  Types.hs
src/Hoff/WorkInProgress/: GroupingOnTableLevel.hs
